--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+<h1>Register Form</h1>
 <form action="/register" method="Post">
     <label for=""fullname>Full Name:</label><br>
     <input type="text" name="fullname"><br>
