--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,12 +10,18 @@
 <body>
 <h1>Register Form</h1>
 <form action="/register" method="Post">
-    <label for=""fullname>Full Name:</label><br>
-    <input type="text" name="fullname"><br>
-    <label for=""username>User Name:</label><br>
-    <input type="text" name="username"><br>
-    <label for=""password>Password:</label><br>
-    <input type="password" name="password"><br>
+    <div>
+        <label for=""fullname>Full Name:</label>
+        <input type="text" name="fullname">
+    </div>
+    <div>
+        <label for=""username>User Name:</label>
+        <input type="text" name="username">
+    </div>
+    <div>
+        <label for=""password>Password:</label>
+        <input type="password" name="password">
+    </div>
     <input type="submit" value="Submit">
 </form>
 </body>
