da sua, hieu oc xem de roi up len

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Register Form</h1>
+<h1>Register to Hieu la oc cho</h1>
 <form action="/register" method="Post">
     <div>
         <label for=""fullname>Full Name:</label>
-        <input type="text" name="fullname">
+        <input type="text" name="fullname" value="Hieu la ngu vl">
     </div>
     <div>
         <label for=""username>User Name:</label>
